# ntua-compilers

./: .gitignore  Makefile  Parser.mly  PrettyPrint.ml  README.md  Types.ml  a.out  ast.ml  ast.mli  ast_old.mli  conflicts.txt  dune  dune-project  foo.c  lexer.ml  lexer.mll  lexer_main.ml  main.ml  parser.mly  parser.output  parser_old copy.mly  pretty_print.ml  semantic.ml  test  tt_Types.mli
bonus-ocaml-1.0/: .depend  Lexer.ml  Parser.ml  Parser.mli  Parser.mly  Types.ml  ast.mli
demo/: dune-project
demo/lib/: ast.ml  dune
docs/progs/: p1.eds  p10.eds  p11.eds  p12.eds  p13.eds  p14.eds  p15.eds  p16.eds  p17.eds  p18.eds  p19.eds  p2.eds  p20.eds  p3.eds  p4.eds  p5.eds  p6.eds  p7.eds  p8.eds  p9.eds
edsger/: dune-project
edsger/_build/: .db  .digest-db  log
edsger/lib/: dune
edsger/test/: dune
grace_compiler/: .gitignore  Makefile  dune-project  foo.ll
grace_compiler/lib/: dune
grace_compiler/test/: dune
misc/: renaming.grc
misc/known_bugs/: double_assignment  minusfor  nik  return.grc  simple_return.grc
programs/: fib_check.py
runtime_lib/: .gitignore  Makefile  lib.c
src/: TypeExpr.ml  Types.ml  ast.ml  codegen.ml  dune  lexer.mll  llift.ml  main.ml  parser.mly  pretty_print.ml  semantic.ml  semantic.mli  types.ml
src/codegen_symbol_table/: CGSymbol.ml  CGSymbol.mli  Symbol.ml  Symbol.mli
src/llift/: llift.ml  llift.mli  move.ml  rename.ml  replace.ml
src/symbol-table-bonus/: Error.ml  Error.mli  PrettyPrint.ml  Symbol.ml  Symbol.mli  Symbtest.ml  Types.ml  Types.mli
src/symbol_table/: Symbol.ml  Symbol.mli  Symbtest.ml
(+109 files in other folders)
