(include_subdirs unqualified)

(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
)

(executable
  (public_name grace)
  (name main)
  (libraries core core_unix.command_unix llvm llvm.analysis)
)

; (rule
  ; (alias runtest)
;;  (deps ../misc/test-progs/fib.eds)
  ; (action (run grace ../misc/test-progs/fib.eds))
; )