(include_subdirs unqualified)

(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
)

(executable
  (public_name gracec)
  (name main)
  (libraries core core_unix.command_unix llvm llvm.analysis llvm.all_backends llvm.target)
  (promote (into ..))
)

; (rule
  ; (alias runtest)
;;  (deps ../misc/test-progs/fib.eds)
  ; (action (run grace ../misc/test-progs/fib.eds))
; )